--- a/themes/default/page/style.css
+++ b/themes/default/page/style.css
@@ -31,12 +31,13 @@ div#footer  {
 } 
 
 div#content  {
+	font-family : freemono, fixed;
 	overflow : auto;
 	margin-bottom : 30px;
 	margin-top : 10px;
 	padding-left : 10px;
 	z-index : 10;
-	color: white;
+	color: gray;
 }
 
 div#header  {
@@ -46,6 +47,9 @@ div#header  {
 	width : 100%;
 	height : 100px;
 	border-bottom : 2px solid blue;
+	background-image: url(../image/tux.png);
+	background-repeat: no-repeat;
+  	background-position: right;
 }
 
 @media screen  {
@@ -56,12 +60,12 @@ div#header  {
 	}
 }
 
-.headitem  {
+/*.headitem  {
 	text-align : right;
 	margin-right : 0;
 	padding-left : 10px;
 	padding-right : 10px;
-}
+}*/
 
 td.listcell  {
 	padding-left : 10px;
@@ -71,12 +75,27 @@ h2  {
 	font-family : freemono, fixed;
 	font-size : 25px;
 	padding : 3px;
-	color: #00FF00;
+	color: #AA0000;
 }
+h3  {
+        font-family : freemono, fixed;
+        font-size : 20px;
+        padding : 3px;
+        color : #AA0000
+ 
+}
+
+ul  {
+	margin : 0;
+	
+}
+
 li  {
 	font-family : freemono, fixed;
-	font-size : 13px;
-	padding : 1px;		
+	/*font-size : 12px;*/
+	/*padding : 55px;*/
+	margin : 0;
+		
 }
 
 p  {
@@ -85,12 +104,13 @@ p  {
 }
 
 a:link, a:visited, a:active  {
-	color : #00FF00;
+	color : white;
 	text-decoration : none;
 }
 
 a:hover  {
-	color : #FF0000;
+	color : #0000FF;
+	font-size : 15px;
 }
 
 input, textarea, select  {
