--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -38,12 +38,14 @@ div#footer  {
 } 
 
 div#content  {
+	font-family : freemono, fixed;
+	font-size : 15px;
 	overflow : auto;
 	margin-bottom : 30px;
 	margin-top : 100px;
 	padding-left : 10px;
 	z-index : 10;
-	color: #00FF00;
+	color: gray;
 	
 }
 
@@ -84,8 +86,16 @@ h2  {
 	font-family : freemono, fixed;
 	font-size : 25px;
 	padding : 3px;
-	color: #00FF00;
+	color: #AA0000;
 }
+h3  {
+        font-family : freemono, fixed;
+        font-size : 20px;
+        padding : 3px;
+	color : #AA0000
+        
+}
+
 
 a:link, a:visited, a:active  {
 	color : white;
@@ -93,7 +103,8 @@ a:link, a:visited, a:active  {
 }
 
 a:hover  {
-	color : #FF0000;
+	color : #0000FF;
+	font-size : 15px;
 }
 
 input, textarea, select  {
