--- a/themes/black.css
+++ b/themes/black.css
@@ -1,5 +1,6 @@
 *  {
-	font-size : 12px;
+	font-size : 11px;
+	font-family: mono, fixed;
 }
 
 body  {
@@ -17,10 +18,14 @@ body  {
 div#footer  {
 	position : absolute;
 	bottom : 0;
+	font-family : freemono, fixed;
+	font-size: 12;
+	padding-left: 1px;
+	padding-top: 1px;
 	left : 0;
 	width : 100%;
-	height : 30px;
-	border-top : 3px solid #888;
+	height : 18px;
+	border-top : 1px solid #888;
 	
 }
 
@@ -38,14 +43,16 @@ div#footer  {
 } 
 
 div#content  {
-	font-family : freemono, fixed;
-	font-size : 15px;
+	font-family : mono, fixed;
+	font-size : 11px;
 	overflow : auto;
 	margin-bottom : 30px;
 	margin-top : 100px;
+	margin-left: 10px;
+	margin-right: 250px;
 	padding-left : 10px;
 	z-index : 10;
-	color: gray;
+	color: white;
 	
 }
 
@@ -54,12 +61,22 @@ div#header  {
 	top : 0;
 	left : 0;
 	width : 100%;
-	height : 100px;
-	border-bottom : 2px solid blue;
+	height : 115px;
+	border-bottom : 1px solid blue;
 	background-image: url(image/tux.png);
 	background-repeat: no-repeat;
   	background-position: right;
 	
+}
+
+p.code{
+
+	border-style:solid;
+	border-width:1px;
+	border-color:blue;
+	padding: 10px 10px 10px 10px;
+	white-space: pre;
+
 }
 
 @media screen  {
@@ -72,6 +89,7 @@ div#header  {
 
 .headitem  {
 	text-align : right;
+	font-family: mono, fixed;
 	margin-right : 0;
 	padding-left : 10px;
 	padding-right : 10px;
@@ -79,18 +97,22 @@ div#header  {
 }
 
 td.listcell  {
+	font-family: mono, fixed;
 	padding-left : 10px;
 }
 
 h2  {
 	font-family : freemono, fixed;
-	font-size : 25px;
+	font-size : 30px;
 	padding : 3px;
 	color: #AA0000;
 }
 h3  {
-        font-family : freemono, fixed;
-        font-size : 20px;
+        /*border-style:solid;
+	border-width:1px;
+	border-color:red;*/
+	font-family : freemono, fixed;
+        font-size : 18px;
         padding : 3px;
 	color : #AA0000
         
@@ -98,7 +120,7 @@ h3  {
 
 
 a:link, a:visited, a:active  {
-	color : white;
+	color : gray;
 	text-decoration : none;
 }
 
